# local-llm

./: .gitignore  app.py  app_config_sample.py  config.py  ollama_ngrok.py  pyproject.toml  requirements-backup.txt  requirements.txt  structure.txt
clients/: alexa.py  aws.py  sqlite.py
models/: account_linking.py  alexa.py  aws.py  base.py  core.py  email.py
routes/: account_linking.py  alexa.py  auth.py  core.py
services/: alexa.py  auth_token.py  rate_limit.py  serve.py  smtp.py  user.py
static/email_template/: registration.html
static/styles/: styles.css
static/templates/: alexa_config.html  alexa_link.html  base.html  change_password.html  home.html  legal.html  login.html  password_reset.html  register.html
